Correct errors in the navbar of the overlapping

--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Montserrat", sans-serif;
-    font-style: normal;
-    outline: none;
-    border: none;
-    text-decoration: none;
 }
 
-html {
-    font-size: 75%;
+body {
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    text-decoration: none;
     overflow-x: hidden;
     scroll-behavior: smooth;
     scroll-padding-top: 5rem;
@@ -23,42 +20,70 @@ html {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1000;
-    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+    z-index: 100;
+    background-color: white;
 }
 
 /*-------NavBar------------*/
 
-.header .navbar .flex {
+.navbar {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
+    padding: 10px 20px;
+    z-index: 1000;
+    overflow: hidden;
+    
 }
 
-.header .navbar .flex .logo a {
+.container {
+    display: flex;
+    align-items: center;
+}
+
+/*-------Logo------------*/
+
+.logo a {
     font-size: 2.2rem;
-    margin-right: 40rem;
+    margin-right: 30rem;
     margin-left: 5rem;
-    font-weight: 400;
+    font-weight: 600;
     text-align: center;
-}
-
-.header .navbar .flex a {
-    display: inline-block;
     color: #000;
-    text-align: center;
-    padding: 12px 20px;
     text-decoration: none;
-    font-size: 1.5rem;
+}
+
+/*-------Navigation Links------------*/
+
+.menu-list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.menu-list li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.menu-list li:last-child {
+    margin-right: 0;
+}
+
+.menu-list li a {
+    color: #000;
+    text-decoration: none;
+    font-size: 1.2rem;
     font-weight: 400;
 }
 
-.header .navbar .flex .logo a:hover {
-    color: #000;
+.menu-list li a:hover {
+    color: #2185D5;
 }
 
-.header .navbar .flex a:hover {
-    color: #2185D5;
+.menu-list .a2 {
+    margin-right: 5rem;
 }
 
 /*--------Home Section --------------*/
@@ -67,7 +92,8 @@ html {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 50px;
+    padding: 40px;
+    position: relative;
 }
 
 .search-section .half-width {
@@ -77,25 +103,25 @@ html {
 
 .search-section img {
     width: 100%;
-    max-width: 600px; /* Adjust as needed */
-    height: 60vh; /* Set a specific height (80% of the viewport height in this case) */
-    object-fit: cover; /* Ensure the image covers the entire container */
-    border-radius: 10px;
+    max-width: 600px;
+    height: 60vh;
+    object-fit: cover;
+    border-radius: 5px;
 }
 
 .search-section h1 {
-    font-size: 3rem;
+    font-size: 1.9rem;
     margin-bottom: 20px;
 }
 
 .search-section h3 {
-    font-size: 1.8rem;
+    font-size: 1.3rem;
     color: #303841;
     margin-bottom: 15px;
 }
 
 .search-section p {
-    font-size: 1.4rem;
+    font-size: 1.05rem;
     line-height: 1.6;
     margin-bottom: 10px;
     text-align: justify;
@@ -103,11 +129,11 @@ html {
 
 .search-section .btn {
     display: inline-block;
-    padding: 8px 13px;
+    padding: 6px 12px;
     margin-bottom: 10px;
     background-color: #2185D5;
     color: white;
-    font-size: 1.1rem;
+    font-size: 0.8rem;
     border-radius: 5px;
     text-decoration: none;
 }
@@ -115,6 +141,51 @@ html {
 .search-section .btn:hover {
     background-color: #1669b2;
 }
+
+/*----------Solutions-------*/
+
+.space-types {
+    margin-left: 20px;
+    padding: 50px 0;
+    text-align: center;
+    position: relative;
+}
+
+.space-types h2 {
+    font-size: 25px;
+    justify-content: left;
+}
+
+.scrolling-wrapper {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
+    margin-top: 20px;
+}
+
+.space-type {
+    flex: 0 0 auto;
+    width: 300px;
+    margin-right: 20px;
+    padding: 20px;
+    border: 1px solid #e0e0e0;
+    border-radius: 7px;
+    text-align: left;
+    background-color: #f9f9f9;
+}
+
+.space-type h3 {
+    margin-bottom: 10px;
+}
+
+/*-------Highlights Spaces----------*/
+
+.highlights {
+    padding-top: 100px;
+}
+
 
 /*-------Footer----------*/
 
@@ -126,4 +197,5 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    z-index: 1000;
 }
